update log lỗi